updated Dogs vs Cats

--- a/Dogs_vs_Cats.ipynb
+++ b/Dogs_vs_Cats.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dogs vs Cats \n",
+    "\n",
+    "data url: https://www.kaggle.com/c/dogs-vs-cats/data?select=train.zip"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -10,7 +19,8 @@
    "source": [
     "!mkdir data\n",
     "!mkdir models\n",
-    "!mkdir testing"
+    "!mkdir testing\n",
+    "!mkdir data/dogs-vs-cats"
    ]
   },
   {
@@ -26,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "id": "iRn1MI5O7k9Z"
    },
@@ -34,10 +44,10 @@
    "source": [
     "import zipfile\n",
     "\n",
-    "with zipfile.ZipFile(\"/content/drive/MyDrive/AI-data/dogs-vs-cats/train.zip\", \"r\") as zip_ref:\n",
+    "with zipfile.ZipFile(\"train.zip\", \"r\") as zip_ref:\n",
     "    zip_ref.extractall(\"data/\")\n",
     "\n",
-    "with zipfile.ZipFile(\"/content/drive/MyDrive/AI-data/dogs-vs-cats/test1.zip\", \"r\") as zip_ref:\n",
+    "with zipfile.ZipFile(\"test1.zip\", \"r\") as zip_ref:\n",
     "  zip_ref.extractall(\"data/\")"
    ]
   },
